--- a/templates/gasolineras/index.html.twig
+++ b/templates/gasolineras/index.html.twig
@@ -7,7 +7,7 @@
     <div class="search-box">
         <form method="get" action="/admin/gasolineras">
             <input type="hidden" name="action" value="search">
-            <input id="search" type="search" name="query" value="" placeholder="Buscar">
+            <input id="search" type="search" name="query" value="{{ query }}" placeholder="Buscar">
             <button class="icon">
                 <i class="fa fa-search"></i>
             </button>
@@ -89,6 +89,10 @@
         </tbody>
     </table>
 </div>
+    <div class="navigation">
+        {{ knp_pagination_render(gasolineras) }}
+    </div>
+
     </div> 
 </div>
 </div> 
